# rdfier

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  install_unco.bat  installation.bat  pyproject.toml  requirements.txt  start_app.bat  start_rdfier.bat  start_rdfier.sh  start_server.bat  start_unco.bat  start_unco.sh  test_environment.py  unco.md
data/: Game.ini  GameUserSettings.ini
data/input/: afemapping_1_public_changed.csv  example_input.csv  namespaces.csv  unittest_reader.csv
data/input/graphkomplex/: input_data.csv
data/input/test_eingabeformat/: eingabeformat.csv
data/results/: afe.txt  boxplot_results.txt  increasing_alternative.txt  increasing_alternatives.txt  increasing_uncertainties.txt  linux_results.txt  robustness.txt  synthetic.txt  synthetic_afe.txt
data/thesis_data/: afe.ttl  afe_overview.csv  namespaces.csv
data/thesis_data/afe/: afe_public.csv  synthetic.csv
data/thesis_data/code-snippets/: sparqlmodel1.rq  sparqlstar.rq  turtle.ttl
data/thesis_data/graph_simpel/: input_data.csv  namespaces.csv
data/thesis_data/model_defs/: input_data.csv
data/thesis_data/rdfstar/: input_data.csv
data/thesis_data/reification/: namespaces.csv
data/thesis_data/short_example/: input_data.csv
data/thesis_graphs/code-snippets/: sparql.rq  sparqlmodel1.rq  sparqlstar.rq  turtlestar.ttl  xml.rdf
data/thesis_graphs/graphkomplex/: input_data.csv
data/thesis_graphs/model_defs/: input_data.csv  namespaces.csv
data/thesis_graphs/rdfstar/: input_data.csv
data/thesis_graphs/reification/: input_data.csv
docker/: docker-compose.yaml
docker/mlflow/: Dockerfile  start.sh
docker/serving/: dockerfile  requirements-serve.txt
docker/serving/serving_backend/: main.py
docker/train/: dockerfile  requirements-train.txt
docs/source/: conf.py  how-to-use.rst  index.rst
docu/: 0_de_dokumentation.md  0_en_documentation.md  1_eingabeformat.html  1_eingabeformat.md  1_input_format.html  1_input_format.md  2_anleitungen.html  2_anleitungen.md  2_instructions.html  2_instructions.md  3_modellierungen.html  3_models.html  EINGABEFORMAT.md  INPUT_FORMAT.md  documentation_en.html  dokumentation_de.html  unco.html  unco.md
docu/source/: 1_eingabeformat.md  1_input_format.md  2_anleitungen.md  2_instructions.md  3_modellierungen.md  3_models.md  documentation_en.html  documentation_en.md  dokumentation_de.md  rdfier.md
docu/unco_docu/: afe_mapping_pipeline.md  fuseki.md  graph_generator.md  illustrator.md  rdf_data.md  uncertainty_generator.md
documentation/: EINGABEFORMAT.md  INPUT_FORMAT.md
execution/: installation.bat  start_app.bat  start_unco.bat
reports/: model_documentation_blueprint.md  project_documentation_blueprint.md
src/: setup.py
src/app/: RDFier.py  Startseite.py  UnCo.py  ✨_UnCo.py
src/app_masterarbeit/: Startseite.py  UNCO.py
src/app_unco/: 03_📊_Uncertainty_Comparator.py
src/benchmark/: afe.txt  benchmark.py  matplot_test.py
src/fuseki1/: fuseki-server.bat
src/rdfier/: __init__.py  main.py
src/rdfier_app/: RDFier.py
src/unco/: __init__.py  run.py
tests/: test_default_utils.py
tests/test_data/: test_query.txt
(+161 files in other folders)
