[tool.poetry]
name = "rdfier"
version = "0.3.0"
description = "Application to turn csv data into a rdf graph"
authors = ["poepperl <luca.poepperl@gmail.com>"]
readme = "README.md"
license="Apache-2.0"
packages = [{ include = "rdfier", from = "src/" }]

[tool.poetry.scripts]
rdfier = 'rdfier.main:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.1"
numpy = "^1.26.0"
pathlib = "^1.0.1"
pydoc-markdown = "^4.8.2"
requests = "^2.31.0"
rdflib = "^7.0.0"
streamlit = "^1.27.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"