[tool.poetry]
name = "rdfier"
version = "1.0.1"
description = "Application to turn csv data into a rdf graph"
authors = ["poepperl <luca.poepperl@gmail.com>"]
readme = "README.md"
license = "CC-BY-NC-4.0"
homepage = "https://github.com/poepperl/rdfier" # pypi
repository = "https://github.com/poepperl/rdfier"
keywords = ["rdf", "rdf-graph", "csv2rdf"]
packages = [{ include = "rdfier", from = "src/" }]

[tool.poetry.scripts]
rdfier = 'rdfier.main:main'

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0,!=3.9.7"
pandas = "^2.2.0"
numpy = "^1.26.3"
pathlib = "^1.0.1"
pydoc-markdown = "^4.8.2"
requests = "^2.31.0"
rdflib = "^7.0.0"
streamlit = "^1.30.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"


[tool.ruff]
exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
]
ignore = ["E501"]
line-length = 88
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "W", # Pycodestyle
    "I", # isort
    "B",
    "C",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[[tool.mypy.overrides]]
module = "sklearn.*,sklearn_pandas.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"